[project]
name = "net-inf-eval"
version = "0.1.0"
description = "Causal network inference evaluation"
authors = [
    { name = "Xiaohan Kang", email = "veggente@gmail.com" },
    { name = "Bruce Hajek", email = "b-hajek@illinois.edu" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "mleroc",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
]

[tool.isort]
profile = "black"
force_single_line = true

[tool.uv.sources]
mleroc = { git = "https://github.com/Veggente/mleroc.git" }
